<resources>
    <string name="app_name">MiPokedex_GuzmanJose</string>
    <string name="pokemon_name">Pikachu</string>
    <string name="pokemon_number">#025</string>
    <string name="type_electric">Eléctrico</string>
    <string name="label_height">Altura</string>
    <string name="value_height">0,4m</string>
    <string name="label_weight">Peso</string>
    <string name="value_weight">6,0kg</string>
    <string name="label_ability">Habilidad</string>
    <string name="value_ability">Elec. Estática</string>
    <string name="pokemon_description">Cuando se enfada, este Pokémon descarga la energía que almacena en el interior de las bolsas de las mejillas.</string>
    <string name="prev_pokemon">Arbok N.º 0024</string>
    <string name="next_pokemon">Raichu N.º 0026</string>
    <string name="title_activity_pokedex_list">PokedexList</string>
</resources>