<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pokemon_yellow"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:id="@+id/iv_pokeball_bg"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="-50dp"
        android:src="@drawable/pokeballpokedex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_sheet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h" />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_star_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/pokemon_name"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pokemon_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_number"
        android:textColor="@color/text_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/tv_pokemon_name"
        app:layout_constraintStart_toStartOf="@id/tv_pokemon_name"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_name" />

    <ImageView
        android:id="@+id/iv_pikachu"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:src="@drawable/pikachupokedex"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_type_pill"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/type_electric"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_pikachu" />

    <TextView
        android:id="@+id/tv_label_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_height"
        android:textColor="@color/text_red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideline_v25"
        app:layout_constraintTop_toBottomOf="@id/tv_type" />

    <TextView
        android:id="@+id/tv_value_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/value_height"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_label_height"
        app:layout_constraintStart_toEndOf="@id/guideline_v25"
        app:layout_constraintTop_toTopOf="@id/tv_label_height" />

    <TextView
        android:id="@+id/tv_label_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_weight"
        android:textColor="@color/text_red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideline_v25"
        app:layout_constraintTop_toBottomOf="@id/tv_label_height" />

    <TextView
        android:id="@+id/tv_value_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/value_weight"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_label_weight"
        app:layout_constraintStart_toEndOf="@id/guideline_v25"
        app:layout_constraintTop_toTopOf="@id/tv_label_weight" />

    <TextView
        android:id="@+id/tv_label_ability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ability"
        android:textColor="@color/text_red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_v75"
        app:layout_constraintStart_toStartOf="@id/guideline_v75"
        app:layout_constraintTop_toTopOf="@id/tv_label_height" />

    <TextView
        android:id="@+id/tv_value_ability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/value_ability"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tv_label_ability"
        app:layout_constraintStart_toStartOf="@id/tv_label_ability"
        app:layout_constraintTop_toBottomOf="@id/tv_label_ability" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/pokemon_description"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_value_weight" />

    <ImageView
        android:id="@+id/iv_arrow_left"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/prev_pokemon"
        android:textColor="@color/text_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrow_left"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_left"
        app:layout_constraintTop_toTopOf="@id/iv_arrow_left" />

    <ImageView
        android:id="@+id/iv_arbok"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/arbokpokedex"
        app:layout_constraintBottom_toTopOf="@id/tv_prev"
        app:layout_constraintEnd_toEndOf="@id/tv_prev"
        app:layout_constraintStart_toStartOf="@id/iv_arrow_left" />

    <ImageView
        android:id="@+id/iv_arrow_right"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/next_pokemon"
        android:textColor="@color/text_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrow_right"
        app:layout_constraintEnd_toStartOf="@id/iv_arrow_right"
        app:layout_constraintTop_toTopOf="@id/iv_arrow_right" />

    <ImageView
        android:id="@+id/iv_raichu"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/raichupokedex"
        app:layout_constraintBottom_toTopOf="@id/tv_next"
        app:layout_constraintEnd_toEndOf="@id/iv_arrow_right"
        app:layout_constraintStart_toStartOf="@id/tv_next" />

</androidx.constraintlayout.widget.ConstraintLayout>